--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Word: <input type="text" name="WordInput" onchange="myFunction()"><br>
 
 <script>
 function myFunction() {
-  var x = document.getElementById("WordInput").value;
+  var x = document.getElementById("WordInput");
   document.getElementById("WordValue").innerHTML = "You selected: " + x;
 }
 </script>
