--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 
 <h1> Hello world</h1>
-Word: <input type="text" name="WordInput" onchange="myFunction()"><br>
+Word: <input type="text" name="WordInput" onkeyup="myFunction()"><br>
 
-<p id="WordValue"></p>
+<p> id="WordValue"></p>
 
 
 <script>
