--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Word: <input type="text" id="WordInput" onkeyup="myFunction()">
 
 <br>
 
-<p> id="WordValue"></p>
+<p id="WordValue"></p>
 
 
 <script>
