--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <h1> Hello world</h1>
 Word: <input type="text" id="WordInput" onkeyup="myFunction()">
 
-<br>
-
 <p id="WordValue"></p>
-
+<p id="WordValue"></p>
 
 <script>
 function myFunction() {
