--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Word: <input type="text" id="WordInput" onkeyup="myFunction()">
 
 <script>
 function myFunction() {
-  var x = document.getElementById("WordInput").Value;
+  var x = document.getElementById("WordInput").value;
   document.getElementById("WordValue").innerHTML = "You selected: " + x;
 }
 </script>
