--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function ClearWinningWordsList()
 {
 localStorage.setItem("WinningWordsList",JSON.stringify([" "]))
 UpdateScoreOnScreen()
-var WinningWordsList = JSON.parse(localStorage.getItem("WinningWordsList")); 
+WinningWordsList = JSON.parse(localStorage.getItem("WinningWordsList")); 
 }
 function UpdateSettings()
 {
